# ez-banana

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.agent/iterations/add-image-generation-options/: FINISHED.md  plan.md  spec.md
.agent/iterations/fastmcp-mcp-server/: FINISHED.md  plan.md  spec.md
.agent/iterations/openrouter-image-cli/: FINISHED.md  plan.md  spec.md
docs/: initial-idea.md  mcp.md  more_options.md
src/ez_banana/: __init__.py  app.py  cli.py  config.py  mcp_server.py  models.py  openrouter.py  output.py  validation.py
tests/: test_main.py  test_mcp_server.py
