[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ez-banana"
version = "0.1.0"
description = "CLI image generation through OpenRouter"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0.2",
    "requests>=2.32.5",
]

[project.scripts]
ez-banana = "ez_banana.cli:main"
ez-banana-mcp = "ez_banana.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
